--- a/frontend/frontend/src/app/components/cart/cart.component.html
+++ b/frontend/frontend/src/app/components/cart/cart.component.html
@@ -38,7 +38,7 @@
             <td>
               <div class="form-inline">
               <button type="button" (click)="onRemoveQuantity(prod)" class="btn btn-info">-</button> 
-              <input type="text"  [ngModel] ="prod.Quantity" (ngModelChange) ="prod.prodquantity=$event" class="form-control form-inline" id="count">
+              <input type="text"  [ngModel] ="prod.prodquantity" (ngModelChange) ="prod.prodquantity=$event" class="form-control form-inline" id="count">
               <button type="button" (click)="onAddQuantity(prod)" class="btn btn-info">+</button>
               </div>
             </td>
@@ -52,66 +52,8 @@
 </ngb-panel>
 
 
-
-
-<!--delivery address-->
-
-<ngb-panel id="static-2">
-  <ng-template ngbPanelTitle>
-    <span><b style="color: silver">Delivery Address </b></span>
-  </ng-template>
-
-  
-    
-
-  <ng-template ngbPanelContent>
-
-    <div class="row col-sm-6" style="max-width:350px;">
-      <form name="form" (ngSubmit)="f.form.valid && onSubmit()" #f="ngForm" novalidate>
-        <div class="form-group">
-          <label for="postalcode"  style="color: silver"><b>Postal code</b></label>  
-          <input type="text" class="form-control" name="postalcode" [(ngModel)]="form.postalcode" #postalcode="ngModel" required />
-          <div *ngIf="f.submitted && postalcode.invalid">
-            <div *ngIf="postalcode.errors.required">postalcode is required</div>
-          </div>
-        </div>
-        <div class="form-group">
-          <label for="streetaddress"  style="color: silver"><b>Street Address</b></label>  
-          <input type="text" class="form-control" name="streetaddress" [(ngModel)]="form.streetaddress" #streetaddress="ngModel"
-            required />
-          <div *ngIf="f.submitted && streetaddress.invalid">
-            <div *ngIf="streetaddress.errors.required">streetaddress is required</div>
-          </div>
-        </div>
-        <div class="form-group">
-          <label for="city"  style="color: silver"><b>City</b></label>  
-          <input type="text" class="form-control" name="city" [(ngModel)]="form.city" #city="ngModel" required  />
-          <div *ngIf="f.submitted && city.invalid">
-            <div *ngIf="city.errors.required">city is required</div>
-          
-          </div>
-        </div>
-        <div class="form-group">
-          <label for="province"  style="color: silver"><b>Province</b></label>  
-          <input type="province" class="form-control" name="province" [(ngModel)]="form.province" #province="ngModel"
-            required  />
-          <div *ngIf="f.submitted && province.invalid">
-            <div *ngIf="province.errors.required">province is required</div>
-           
-          </div>
-        </div>
-        <div class="form-group">
-          <button class="btn btn-secondary">Add Address</button>
-        </div>
-      </form>
-    </div>
-    <h1><button class="btn btn-secondary" style="text-align : bold;" (click)="acc.toggle('static-3')">Proceed to Order</button></h1>
-</ng-template>
-</ngb-panel>
-
-
 <!--orders-->
-<ngb-panel id="static-3">
+<ngb-panel id="static-2">
   <ng-template ngbPanelTitle>
     <span><b style="color: silver">Order Details </b></span>
   </ng-template>
@@ -119,26 +61,44 @@
     <form [formGroup]="deliveryForm" (ngSubmit)="yourSubmitFunction(deliveryForm)">
       <div class="form-group">
         <div class="col-md-12">
-          <h5 style="color: silver" >Name:</h5>  <input type="text"  formControlName="username" class="form-control"   >
+          <h5 style="color: silver" >Name:</h5>  <input type="text" placeholder="Enter username" formControlName="username" class="form-control"   >
+    
+          <span class="text-muted" *ngIf="deliveryForm.get('username').hasError('required') && deliveryForm.get('username').touched"><p style="color: rgb(252, 4, 4)">username is required</p></span>
         </div>
         <div  class="col-md-12">
             <h5 style="color: silver" >Delivery Address:</h5> 
-            <textarea id="textarea" name="textarea" formControlName="deliveryaddress" class="form-control"  rows="3" cols="15"></textarea>
+            <textarea id="textarea" name="textarea" formControlName="deliveryaddress" placeholder="Enter Delivery Address" class="form-control"  rows="3" cols="15"></textarea>
+            <span class="text-muted" *ngIf="deliveryForm.get('deliveryaddress').hasError('required') && deliveryForm.get('deliveryaddress').touched"><p style="color: rgb(252, 4, 4)">Address is required</p></span>
           </div>
+
+
           <div class="col-md-12">
-              <h5 style="color: silver" >Phone:</h5>  <input type="text" formControlName="phone" class="form-control"   >
+              <h5 style="color: silver" >Phone:</h5>  <input type="text" placeholder="Enter Cellphone" formControlName="phone" class="form-control"   >
+              <span class="text-muted" *ngIf="deliveryForm.get('phone').hasError('required') && deliveryForm.get('phone').touched"><p style="color: rgb(252, 4, 4)">Phone is required</p></span>
             </div>
+
+
             <div class="col-md-12">
-                <h5 style="color: silver" >Email:</h5>  <input type="text" formControlName="email" class="form-control"   >
+                <h5 style="color: silver" >Email:</h5>  
+                <input type="email" formControlName="email" placeholder="Enter Email Address" class="form-control"  class="form-control"  required  >
+                    <div *ngIf="email.invalid && !email.pristine">
+                  <p *ngIf="email.errors.email" style="color: red">Valid email is required.</p>
+                </div>
+              <span class="text-muted" *ngIf="deliveryForm.get('email').hasError('required') && deliveryForm.get('email').touched"><p style="color: rgb(252, 4, 4)">Email is required</p></span>
               </div>
+
+
+
               <div class="col-md-12">
-                  <h5 style="color: rgb(204, 199, 199)" >Message:</h5>  <input type="text" formControlName="message" class="form-control"   >
+                  <h5 style="color: rgb(204, 199, 199)" >Message:</h5>  <input type="text" placeholder="Enter Message" formControlName="message" class="form-control"   >
+                  <span class="text-muted" *ngIf="deliveryForm.get('message').hasError('required') && deliveryForm.get('message').touched"><p style="color: rgb(252, 4, 4)">Message is required</p></span>
                 </div>
                 <div class="col-md-12">
-                    <h5 style="color: silver" >Total Amount To Pay:</h5>  <input type="text" formControlName="amount" class="form-control"   >
+                    <h5 style="color: silver" >Total Amount To Pay:</h5>  <input type="text" formControlName="amount" class="form-control"  readonly >
+                 
                   </div>
       </div>
-      <button type="submit" style="margin-left: 39%;" [disabled]="!deliveryForm.valid" class="btn btn-secondary" (click)="acc.toggle('static-3')"><b></b></button>
+      <button type="submit" style="margin-left: 39%;" [disabled]="!deliveryForm.valid" (click)="acc.toggle('static-3')" class="btn btn-secondary" ><b>Proceed</b></button>
     </form>
 </ng-template>
 </ngb-panel>
@@ -210,7 +170,7 @@
      </tr>
      <tr>
        <td  class="text-center" >
-          <button type="button" class="btn btn-outline-secondary" (click)="ConfirmOrder()"><b>Confirm Order</b></button>
+          <button type="button" class="btn btn-outline-secondary" (click)="ConfirmOrder(); removeChart() "><b>Confirm Order</b></button>
        </td>
      </tr>
    </table>
