--- a/frontend/frontend/src/app/components/cart/cart.component.html
+++ b/frontend/frontend/src/app/components/cart/cart.component.html
@@ -16,7 +16,7 @@
     
 <h1 style="color: rgba(45, 85, 79, 0.548)">Items in your cart<span style="margin-left: 5%;margin-right: 22%;color: rgba(45, 85, 79, 0.548)">
         Total value is: {{allTotal|| "0"}}</span>
-<button class="btn btn-secondary" style="text-align : bold;" (click)="acc.toggle('static-2')">Checkout</button>
+
 </h1>
         
         <table class="table table-bordered table-responsive table-hover">
@@ -28,10 +28,11 @@
             <th>Quantity</th>
             <th>Remove And Add </th>
             <th>Total For Items</th>
+            <th>Delete </th>
           </tr>
           </thead>
           <tr *ngFor="let prod of productAddedTocart;let q = index">
-            <td><img src="data:image/png;base64,{{prod.logo}}" width="250px;" height="200px;"/></td>
+            <td><img src="data:image/png;base64,{{prod.logo}}" width="170px;" height="140px;"/></td>
             <td class="text-center">{{prod.prodname}}</td>
             <td>{{prod.prodprice | currency:'R'  }}</td>
             <td>{{prod.prodquantity}}</td>
@@ -43,8 +44,13 @@
               </div>
             </td>
             <td>{{prod.prodprice * prod.prodquantity| currency:'R'}}</td>
+            <td> <button type="button" class="btn btn-info" (click)="[deleteProduct(prod.id),reload()]">Delete</button></td>
           </tr>
         </table>
+        <div>
+          <button class="btn btn-secondary" style="text-align : bold;" (click)="acc.toggle('static-2')">Checkout</button>
+        </div>
+        
     </div>
   </div>
 </div>
@@ -58,13 +64,15 @@
     <span><b style="color: silver">Order Details </b></span>
   </ng-template>
   <ng-template ngbPanelContent>
-    <form [formGroup]="deliveryForm" (ngSubmit)="yourSubmitFunction(deliveryForm)">
+    <form [formGroup]="deliveryForm">
       <div class="form-group">
+        
         <div class="col-md-12">
-          <h5 style="color: silver" >Name:</h5>  <input type="text" placeholder="Enter username" formControlName="username" class="form-control"   >
-    
-          <span class="text-muted" *ngIf="deliveryForm.get('username').hasError('required') && deliveryForm.get('username').touched"><p style="color: rgb(252, 4, 4)">username is required</p></span>
+          <h5 style="color: silver" >Username:</h5>  <input  placeholder="Enter Username" formControlName="username" class="form-control"   >
+          <span class="text-muted" *ngIf="deliveryForm.get('username').hasError('required') && deliveryForm.get('username').touched"><p style="color: rgb(252, 4, 4)">Username is required</p></span>
         </div>
+
+
         <div  class="col-md-12">
             <h5 style="color: silver" >Delivery Address:</h5> 
             <textarea id="textarea" name="textarea" formControlName="deliveryaddress" placeholder="Enter Delivery Address" class="form-control"  rows="3" cols="15"></textarea>
@@ -73,14 +81,17 @@
 
 
           <div class="col-md-12">
-              <h5 style="color: silver" >Phone:</h5>  <input type="text" placeholder="Enter Cellphone" formControlName="phone" class="form-control"   >
-              <span class="text-muted" *ngIf="deliveryForm.get('phone').hasError('required') && deliveryForm.get('phone').touched"><p style="color: rgb(252, 4, 4)">Phone is required</p></span>
+              <h5 style="color: silver" >Phone:</h5>  <input  placeholder="Enter Cellphone" formControlName="phone" class="form-control"   >
+              <span class="text-muted" *ngIf="deliveryForm.get('phone').hasError('required') && deliveryForm.get('phone').touched"><p style="color: rgb(252, 4, 4)">Mobile Number is required</p></span>
+              <span class="text-muted" *ngIf="deliveryForm.get('phone').hasError('minlength') && deliveryForm.get('phone').touched"><p style="color: rgb(252, 4, 4)">Mobile number must be 10 digits</p></span>
+              <span class="text-muted" *ngIf="deliveryForm.get('phone').hasError('pattern') && deliveryForm.get('phone').touched"><p style="color: rgb(252, 4, 4)">This input field allows only numerical values</p></span>
+              <span class="text-muted" *ngIf="deliveryForm.get('phone').hasError('maxlength') && deliveryForm.get('phone').touched"><p style="color: rgb(252, 4, 4)">Mobile number must be 10 digits</p></span>
             </div>
 
 
             <div class="col-md-12">
                 <h5 style="color: silver" >Email:</h5>  
-                <input type="email" formControlName="email" placeholder="Enter Email Address" class="form-control"  class="form-control"  required  >
+                <input formControlName="email" placeholder="Enter Email Address" class="form-control"  class="form-control"  required  >
                     <div *ngIf="email.invalid && !email.pristine">
                   <p *ngIf="email.errors.email" style="color: red">Valid email is required.</p>
                 </div>
@@ -90,15 +101,16 @@
 
 
               <div class="col-md-12">
-                  <h5 style="color: rgb(204, 199, 199)" >Message:</h5>  <input type="text" placeholder="Enter Message" formControlName="message" class="form-control"   >
+                  <h5 style="color: rgb(204, 199, 199)" >Message:</h5>  <input  placeholder="Enter Message" formControlName="message" class="form-control"   >
                   <span class="text-muted" *ngIf="deliveryForm.get('message').hasError('required') && deliveryForm.get('message').touched"><p style="color: rgb(252, 4, 4)">Message is required</p></span>
+                  
                 </div>
                 <div class="col-md-12">
-                    <h5 style="color: silver" >Total Amount To Pay:</h5>  <input type="text" formControlName="amount" class="form-control"  readonly >
+                    <h5 style="color: silver" >Total Amount To Pay:</h5>  <input formControlName="amount" class="form-control"  readonly >
                  
                   </div>
       </div>
-      <button type="submit" style="margin-left: 39%;" [disabled]="!deliveryForm.valid" (click)="acc.toggle('static-3')" class="btn btn-secondary" ><b>Proceed</b></button>
+      <button type="submit" style="margin-left: 40%;" [disabled]="!deliveryForm.valid" (click)="acc.toggle('static-3')" class="btn btn-secondary" ><b>Proceed</b></button>
     </form>
 </ng-template>
 </ngb-panel>
@@ -128,12 +140,14 @@
               <th>Total For Item</th>
             </tr>
             </thead>
-            <tr *ngFor="let prod of productAddedTocart;let q = index">
+            <ng-container *ngFor="let prod of productAddedTocart;let q = index">
+            <tr  *ngIf="prod.prodquantity > 0">
               <td class="text-center">{{prod.prodname}}</td>
               <td>{{prod.prodprice | currency:'R'}}</td>
               <td>{{prod.prodquantity}}</td>
               <td>{{prod.prodprice * prod.prodquantity| currency:'R' }}</td>
             </tr>
+            </ng-container>
           </table>
 
         </td>
@@ -150,6 +164,7 @@
             <th>Delivery Address</th>
             <th>Phone</th>
             <th>Email</th>
+            <th>Total Price</th>
             <th>Message</th>
           </tr>
           </thead>
@@ -158,6 +173,7 @@
             <td>{{deliveryForm.value.deliveryaddress}}</td>
             <td>{{deliveryForm.value.phone}}</td>
             <td>{{deliveryForm.value.email}}</td>
+            <td>{{deliveryForm.value.amount}}</td>
             <td>{{deliveryForm.value.message}}</td>
           </tr>
         </table>
